--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.9.1
 attrs==25.3.0
 Django==5.2.5
+django-filter==25.1
 djangorestframework==3.16.1
 drf-spectacular==0.28.0
 inflection==0.5.1
